tests/baselines/reference/YieldExpression1_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression1_es6.ts(1,1): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression1_es6.ts (1 errors) ====
    yield;
    ~~~~~
!!! error TS2304: Cannot find name 'yield'.